Cambié el color de la letra

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 body{
     background: #352d39;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: indigo;
+    color: yellowgreen;
     text-align: center;    
     display: flex;
     flex-direction: column;
