mejoré el footer y cambié el color de letra

--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 body{
     background: #352d39;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: white;
+    font-family:monospace;
+    color: #352d39;
     text-align: center;    
     display: flex;
     flex-direction: column;
@@ -11,11 +11,14 @@ body{
 .footer{
     margin: 5px;
     display: flex;
-    outline: black solid 1px;
+    outline: black solid 2px;
     border:#F08080 solid 1px;
-    padding: 5px;
+    padding: 10px;
     display: flex;
     justify-content: space-around;
+    background: #DECCCC;
+    width: 420px;
+    letter-spacing: 1px;
 }
 .footer > li{
     list-style: none;
@@ -26,11 +29,11 @@ body{
     margin: 0;
 }
 .header{
-    padding: 10px;
+    padding: 8px;
     border: #F08080 1px solid;
-    outline: black 1px solid;
+    outline: black 2px solid;
     margin: 5px;
-    width: 400px;
+    width: 350px;
     background: #FF6978;
     display: flex;
     align-items: center;
@@ -45,7 +48,7 @@ body{
 body > div{
     padding: 20px;
     border: #F08080 1px solid;
-    outline: rgb(78, 66, 66) 1px solid;
+    outline: black 2px solid;
     margin: px;
     background: #b1ede8;
     width: 300px;
